syntax = "proto3";

package student;

option go_package = "platzi.com/go/grpc;studentpb";

message Student {
  string id = 1;
  string name = 2;
  int32 age = 3;
}

// Messages from clients
message GetStudentRequest {
    string id = 1;
}

// Messages from server
message SetStudentResponse {
    string id = 1;
}

// Student Service
service StudentService {
    // Methods of Student Service (Unary)
    rpc GetStudent(GetStudentRequest) returns (Student);
    rpc SetStudent(Student) returns (SetStudentResponse);
}